src/objects/QPMS__Scorecard_History__c.object
<CustomObject>
    <description>this object is used to store score card and supplier score card audit trails</description>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Score Card</fullName>
                </value>
                <value>
                    <fullName>Supplier Score Definition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Score_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score Card</label>
        <referenceTo>QPMS__Score_Card__c</referenceTo>
        <relationshipLabel>Scorecard Historys</relationshipLabel>
        <relationshipName>Scorecard_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Score Card</fullName>
                </value>
                <value>
                    <fullName>Supplierscore Definition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Score_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Score Definition</label>
        <referenceTo>QPMS__Supplier_Score_Definition__c</referenceTo>
        <relationshipLabel>Scorecard Historys</relationshipLabel>
        <relationshipName>Scorecard_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorecard History</label>
    <nameField>
        <displayFormat>SCH-{0000000}</displayFormat>
        <label>Scorecard History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>